cmake_minimum_required(VERSION 3.14)
project(omniCpp)

set(CMAKE_CXX_STANDARD 14)
set(OpenCV_DIR /home/cagan/opencv_build/OpenCV/build)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})

set(SOURCE_FILES main.cpp)
add_executable(omniCpp main.cpp)
target_link_libraries(omniCpp ${OpenCV_LIBS})